--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@nearform/sql": "^1.5.1",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "postgrator": "^4.1.1"
   },
