--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "pet-adoption-backend-eavior",
   "main": "index.js",
   "scripts": {
+    "dev2": "NODE_ENV=development nodemon server.js | pino-pretty",
     "dev": "NODE_ENV=development nodemon server.js",
     "start": "NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,9 +30,11 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
+    "pino-http": "^5.5.0",
     "postgrator": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pino-pretty": "^4.7.1"
   }
 }
