--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,9 @@
 
-DB_HOST="127.0.0.1"
+DB_HOST="esilxl0nthgloe1y.chr7pe7iynqr.eu-west-1.rds.amazonaws.com"
 DB_PORT=3306
-DB_NAME='pets_db'
-DB_USER='site'
-DB_PASSWORD='dUzM48!we#'
+DB_NAME='hw3scr983odes2uf'
+DB_USER='h6eq6e82w2l9t752'
+DB_PASSWORD='hc3lshxku3xmfm8b'
 
 JWT_SECRET='whatEVER'
 
@@ -16,5 +16,5 @@ HOST='0.0.0.0'
 
 LOG_LEVEL=debug
 
-MIGRATION_DIR='../migrations'
+MIGRATION_DIR='../migrationsProduction'
 
